--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,8 +44,8 @@
         <activity android:name=".Reports.income.IncomeReportActivity" />
         <activity android:name=".Reports.expense.ExpenseReportActivity" />
         <activity android:name=".Reports.financial.FinancialReportActivity" />
-        <activity android:name=".Reports.loss.ProductLossReportActivity" />
-        <activity android:name=".Reports.ProductDetailActivity" />
+        <activity android:name=".Reports.ProductLoss.ProductLossReportActivity" />
+        <activity android:name=".ProductDetail.ProductDetailActivity" />
         <activity android:name=".Reports.customer.CustomerReportActivity" />
     </application>
 
